Implemented edge detection and added constants and checks for all inputs

--- a/Photochopp-premiere/Photochopp-premiere.vcxproj.filters
+++ b/Photochopp-premiere/Photochopp-premiere.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="FilterManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Constants.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FilterManager.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Constants.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
